Change main photo

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/1587761181425.jpg" alt="Wojtek's profile picture"></td>
+      <td><img src="images\photo-circle.png" alt="Wojtek's profile picture"></td>
       <td>
         <h1>Wojciech Kuligowski</h1>
         <p><em>Master of Arts in <strong>Computer Science</strong></em></p>
-        <p>Somethin about me</p>
+        <p>Something about me</p>
       </td>
     </tr>
   </table>
